--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MelodyCraft</string>
+    <string name="explore">Explore</string>
+    <string name="recent">Recent</string>
+    <string name="search">Search</string>
+    <string name="profile">Profile</string>
+    <string name="floating_action">Floating Action</string>
 </resources>
