--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="search">Search</string>
     <string name="profile">Profile</string>
     <string name="floating_action">Floating Action</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dolby_atmos">Dolby Atmos</string>
+    <string name="add_song">Add Song</string>
 </resources>
