--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
     <string name="app_name">MelodyCraft</string>
-    <string name="explore">Explore</string>
-    <string name="recent">Recent</string>
+    <string name="home">Home</string>
+    <string name="generate">Generate</string>
     <string name="search">Search</string>
     <string name="profile">Profile</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="name">Name</string>
@@ -14,7 +13,7 @@
     <string name="logout">Logout</string>
     <string name="profile_image">Profile Image</string>
     <string name="toggle_theme">Toggle Theme</string>
-    <string name="floating_action">Floating Action</string>
-    <string name="dolby_atmos">Dolby Atmos</string>
-    <string name="add_song">Add Song</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="generate_melody_text">Create beautiful melody in seconds</string>
 </resources>
