--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">MelodyCraft</string>
     <string name="home">Home</string>
     <string name="generate">Generate</string>
-    <string name="search">Search</string>
+    <string name="player">Player</string>
     <string name="profile">Profile</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
